[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/NPC/CombatEnemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Characters/Knight/Attack/attack_70004.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/white_texture.png" type="Texture" id=3]
[ext_resource path="res://src/UI/ActorHealthBar.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.0
height = 104.0

[node name="CombatEnemy" type="Node2D"]
script = ExtResource( 1 )

[node name="SelectionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectionArea"]
position = Vector2( 2.19238, -72.8198 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8.00903, -80.0904 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="ActorHealthBar" parent="." instance=ExtResource( 4 )]
position = Vector2( -45.5422, -181.71 )

[node name="SelectedCharacter" type="Sprite" parent="."]
visible = false
modulate = Color( 0.294118, 0.278431, 0.266667, 1 )
show_behind_parent = true
position = Vector2( 4.24265, -87.3884 )
scale = Vector2( 1.52769, 3.94628 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 211.507, 55.2978, 67.5256, 60.1591 )

[connection signal="input_event" from="SelectionArea" to="." method="_on_SelectionArea_input_event"]
